// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _accessKey="V" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _alert=true 1`] = `
<kol-input-number _alert="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _disabled=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="disabled kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _hint="Hint" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
        </div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <div class="inputAdornment-end">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
        </div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <div class="inputAdornment-end"></div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start"></div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <div class="inputAdornment-end">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-number _hide-error="">
  <template shadowrootmode="open">
    <div class="hidden-error kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _readOnly=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number read-only" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _shortKey="S" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start"></div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <div class="inputAdornment-end">
          <kol-button-wc _hidelabel="" _label="einblenden" tabindex="0"></kol-button-wc>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _accessKey="V" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _alert=true 1`] = `
<kol-input-number _alert="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _disabled=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="disabled kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _hint="Hint" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
        </div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
        <div class="inputAdornment-end">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
        </div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
        <div class="inputAdornment-end"></div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start"></div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
        <div class="inputAdornment-end">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-number _hide-error="">
  <template shadowrootmode="open">
    <div class="hidden-error kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input aria-describedby="id-nonce-msg" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _readOnly=true 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number read-only" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _shortKey="S" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start"></div>
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
        <div class="inputAdornment-end">
          <kol-button-wc _hidelabel="" _label="einblenden" tabindex="0"></kol-button-wc>
        </div>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _touched=true 1`] = `
<kol-input-number _touched="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
        <datalist id="id-nonce-list">
          <option value="1"></option>
          <option value="2"></option>
          <option value="3"></option>
        </datalist>
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _touched=true 1`] = `
<kol-input-number _touched="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" 1`] = `
<kol-input-number>
  <template shadowrootmode="open">
    <div class="kol-input kol-input-number number" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </div>
  </template>
</kol-input-number>
`;
